# elec-charge-pp

./: Arrow.cpp  Arrow.hpp  CMakeLists.txt  ChargeRenderer.cpp  ChargeRenderer.hpp  ElectricField.cpp  ElectricField.hpp  Menu.cpp  Menu.hpp  README.md  Sensor.cpp  Sensor.hpp  TextRender.cpp  TextRender.hpp  main.cpp  windows-toolchain.cmake
shaders/: charge_fragment.glsl  fragment.glsl  sensor_fragment.glsl
